--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/labrador"]
 	path = src/labrador
-	url = git@github.com:gregorseiler/labrador.git
+	url = git@github.com:lattice-dogs/labrador.git
+	branch = main
